Revision history for DBIx::Class

        - Support for Firebird RDBMS with DBD::InterBase and ODBC
        - DBIx::Class::InflateColumn::File entered deprecated state
        - DBIx::Class::Optional::Dependencies left experimental state
        - Add req_group_list to Opt::Deps (RT#55211)
        - Cascading delete/update are now wrapped in a transaction
          for atomicity
        - Fix multiple deficiencies when using MultiCreate with
          data-encoder components (e.g. ::EncodedColumn)
        - Fix regression where SQL files with comments were not
          handled properly by ::Schema::Versioned.
        - Fix regression on not properly throwing when $obj->relationship
          is unresolvable
        - Fix the join-optimiser to consider unqualified column names
          whenever possible
        - Add has_relationship method to row objects
        - Fix regression in set_column on PK-less objects
        - Better error text on malformed/missing relationships
        - Add POD about the significance of PK columns
        - Fix for SQLite to ignore the (unsupported) { for => ... }
          attribute
        - Fix ambiguity in default directory handling of create_ddl_dir
          (RT#54063)
        - Fix update_all and delete_all to be wrapped in a transaction
        - Support add_columns('+colname' => { ... }) to augment column
          definitions.
        - Fix spurious warnings on multiple UTF8Columns component loads
        - Unicode support documentation in Cookbook and UTF8Columns

0.08120 2010-02-24 08:58:00 (UTC)
        - Make sure possibly overwritten deployment_statements methods in
          schemas get called on $schema->deploy
        - Fix count() with group_by aliased-function resultsets
        - with_deferred_fk_checks() Oracle support
        - Massive refactor and cleanup of primary key handling
        - Fixed regression losing custom result_class (really this time)
          (RT#54697)